--- a/insanity_games/static/base.css
+++ b/insanity_games/static/base.css
@@ -1,3 +1,7 @@
+body {
+font-family: "Montserrat", sans-serif;
+}
+
 #user_nav, #core_nav {
 font-family: "Montserrat", sans-serif;
 font-size: 1.5rem;
@@ -7,3 +11,4 @@ font-size: 1.5rem;
 padding: 10px;
 margin: 10px;
 }
+
