--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -1,10 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends 'base.html' %}
+
+{%block title%}Sign up{%endblock%}
+
+{% block body %}
+<div class="container-fluid bg-light shadow-lg">
+  <div class="row justify-content-center py-5">
+    <div class="col-sm-8 col-md-6 col-lg-4 bg-white p-4">
+      <h1 class="text-center">Sign up!</h1>
+      {% if error %}
+      <p style="color:red">{{ error }}</p>
+      {% endif %}
+      <form method="POST" action="{% url 'signup' %}">
+        {% csrf_token %}
+        <div class="form-group">
+          <label for="username">Username:</label>
+          <input type="text" name="username" class="form-control"/>
+        </div>
+        <div class="form-group">
+          <label for="password">Password:</label>
+          <input type="password" name="password" class="form-control"/>
+        </div>
+          <div class="form-group">
+          <label for="password2">Confirm password:</label>
+          <input type="password" name="password2" class="form-control"/>
+        </div>
+        <div class="text-center">
+          <button class="btn btn-primary" type="submit">Sign up</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+
+{% endblock %}
