--- a/games/templates/game.html
+++ b/games/templates/game.html
@@ -1,10 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block title %}
+{{ game.title }} - Insanity Games
+{% endblock %}
+
+{% block body %}
+<div class="container my-5">
+    <div class="row">
+        <div class="col-lg-8">
+            <img src="{{ game.cover.url }}" class="img-fluid" alt="{{ game.title }}">
+            <h1 class="mt-4">{{ game.title }}</h1>
+            <hr>
+            <p>{{ game.description }}</p>
+        </div>
+        <div class="col-lg-4">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">Game Details</h4>
+                    <ul class="list-group">
+                        <li class="list-group-item">Release Date: {{ game.release_date|date:"F d, Y" }}</li>
+                        <li class="list-group-item">Genre: {{ game.genre }}</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
