--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -8,8 +8,8 @@
 
 {% block body %}
 
-<div class="container-fluid bg-light shadow-lg">
-  <div class="row justify-content-center py-5">
+<div class="container-fluid bg-light ">
+  <div class="row justify-content-center py-5 ">
     <div class="col-sm-8 col-md-6 col-lg-4 bg-white p-4">
       <h1 class="text-center">Login!</h1>
       {% if error %}
