--- a/insanity_games/templates/base.html
+++ b/insanity_games/templates/base.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" type="text/css" href="{% static 'base.css' %}">
     <!-- Boostrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.theme.default.min.css">
     {% block head %}
     {% endblock %}
 </head>
@@ -30,6 +32,9 @@
           </li>
           <li class="nav-item active core">
             <a class="nav-link" href="{% url 'all_opinions' %}">OPINIONS</a>
+          </li>
+          <li class="nav-item active core">
+            <a class="nav-link" href="{% url 'news' %}">NEWS</a>
           </li>
         </ul>
         <ul class="navbar-nav ml-auto" id="user_nav">
@@ -63,8 +68,11 @@
           <li class="nav-item"><a href="{% url 'about_us' %}" class="nav-link px-2 text-muted">About Us</a></li>
           <li class="nav-item"><a href="{% url 'contact_us' %}" class="nav-link px-2 text-muted">Contact</a></li>
           <li class="nav-item"><a href="{% url 'all_opinions' %}" class="nav-link px-2 text-muted">Opinions</a></li>
+          <li class="nav-item"><a href="{% url 'news' %}" class="nav-link px-2 text-muted">News</a></li>
         </ul>
         <p class="text-center text-muted">© Insanity Games {% now "Y" %} </p>
+        <p class="text-center text-muted">Design and implementation - Maciej Fularz</p>
+        <p class="text-center text-muted">Special thanks to: K. Gasimov, P. Czerwiński, R. Piszczek for moral support!</p>
       </footer>
     </div>
 
@@ -72,6 +80,6 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
 </body>
 </html>
